# starpsx

./: .gitignore  .gitmodules  Cargo.toml  Compatibility.md  LICENSE  README.md  justfile  run_tests.py  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: compat.yml  release.yml
core/: Cargo.toml
core/src/: consts.rs  irq.rs  lib.rs  mem.rs  sched.rs  scheduler.rs  sio.rs  timer.rs  timers.rs
core/src/cdrom/: cd_image.rs  cdxa_audio.rs  commands.rs  mod.rs
core/src/cpu/: cop0.rs  disasm.rs  instrs.rs  mod.rs  utils.rs
core/src/cpu/gte/: commands.rs  mat3.rs  math.rs  math_traits.rs  mod.rs  util.rs  utils.rs  vec2.rs  vec3.rs
core/src/dma/: channel.rs  mod.rs  utils.rs
core/src/gpu/: commands.rs  gp0.rs  gp1.rs  mod.rs  renderer.rs  utils.rs
core/src/mdec/: mod.rs  util.rs
core/src/memory/: bios.rs  flatmem.rs  handlers.rs  irqctl.rs  map.rs  mod.rs  ram.rs  scratch.rs  utils.rs
core/src/sio/: blank.mcd  device_manager.rs  gamepad.rs  memory_card.rs  mod.rs
core/src/spu/: adsr.rs  envelope.rs  mod.rs  reverb.rs  snapshot.rs  utils.rs  voice.rs
core/src/timer/: mod.rs  timer0.rs  timer1.rs  timer2.rs
core/src/timers/: mod.rs  timer0.rs  timer1.rs  timer2.rs
cue/: Cargo.toml
cue-parser/: Cargo.toml
cue-parser/src/: lib.rs
cue/src/: builder.rs  lib.rs  parser.rs  scanner.rs
frontend/: Cargo.toml  build.rs
frontend/src/: app.rs  audio.rs  config.rs  debugger.rs  egui_tools.rs  egui_ui.rs  emulator.rs  gamepad.rs  input.rs  main.rs  util.rs  utils.rs
frontend/src/app/: app_state.rs  mod.rs  ui.rs  util.rs
frontend/src/debugger/: disasm.rs  mod.rs  snapshot.rs
procmac/: Cargo.toml
procmac/examples/: test_bool.rs
procmac/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: lib.rs  utils.rs  vec2.rs
scripts/: build_appimage.sh  build_macapp.sh
src/: lib.rs  main.rs
src/cpu/: cop0.rs  disasm.rs  instrs.rs  mod.rs  opcode.rs  utils.rs
src/dma/: channel.rs  mod.rs  utils.rs
src/gpu/: commands.rs  mod.rs  utils.rs
src/memory/: bios.rs  map.rs  mod.rs  ram.rs  scratch.rs
