[workspace]
resolver = "3"
members = ["core", "cue", "frontend", "renderer"]

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
unwrap_used = "deny"

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "symbols"
lto = "thin"
panic = "abort"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
