[workspace]
resolver = "3"
members = ["core", "cue", "frontend", "procmac", "renderer"]

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"

# Annoying lints that I don't want
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "symbols"
lto = "thin"
panic = "abort"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
