[package]
name = "starpsx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrayvec = "0.7.6"
bitfield = "0.19.1"
bytemuck = "1.24.0"
cue = { path = "../cue" }
derive_more = { version = "2.1.1", features = ["index", "index_mut"] }
num_enum = "0.7.5"
procmac = { path = "../procmac" }
starpsx-renderer = { path = "../renderer" }
tracing = "0.1.43"

[lints]
workspace = true
