[package]
name = "starpsx"
version = "0.4.5"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
eframe = { version = "0.33.3", features = ["wgpu"] }
futures = "0.3.31"
gilrs = "0.11.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
starpsx-core = { path = "../core" }
starpsx-renderer = { path = "../renderer" }
toml = "0.9.11"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
