[package]
name = "starpsx"
version = "0.8.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.24.0"
clap = { version = "4.5.54", features = ["derive"] }
cpal = "0.17.3"
cue = { path = "../cue" }
dirs = "6.0.0"
eframe = { version = "0.33.3", default-features = false, features = [
  "default_fonts",
  "glow",
  "wayland",
  "x11"
] }
egui_extras = "0.33.3"
egui-notify = "0.21.0"
gilrs = "0.11.0"
rfd = "0.17.2"
ringbuf = "0.4.8"
serde = { version = "1.0.228", features = ["derive"] }
spin_sleep = "1.3.3"
starpsx-core = { path = "../core" }
starpsx-renderer = { path = "../renderer" }
toml = "0.9.11"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }

[lints]
workspace = true
